Joomla! 1.6, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Bug Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

18-Apr-2010 Mark Dexter
# Fix parse error in libraries/joomla/form/form.php
# Display of record number in edit forms (Elin Waring)

18-Apr-2010 Jean-Marie Simonet
$ Added JText__ for item deletion. Correcting, adding some keys/inis
$ Refactoring ini/keys in libraries/J/form
$ Refactoring ini/keys in libraries/J/html + some, WIP

17-Apr-2010 Mark Dexter
# Change condition in JRegistry merge method to be consistent with get method 

17-Apr-2010 Jean-Marie Simonet
# Fixed [20169]. (Thanks Andrea]
^ Added Title for accessibility [20171]. (Thanks Andrea]

16-Apr-2010 Mark Dexter
# Fix JParameter merge bug with integer zero param value (plus unit test for same)

16-Apr-2010 Jean-Marie Simonet
# Fixing mod_random_image (Thanks Dennis)
# Fix translation of "ROOT" in parent field for categories (Thanks Dennis)

15-Apr-2010 Hannes Papenberg
 # Fixed Metadata retrieval in JCategories

15-Apr-2010 Mark Dexter
 # Fix bug in JCategories causing failed system test
 # Fix minor language issue for consistency
 # Misc. fixes to system tests

15-Apr-2010 Ian MacLennan
 # Minor docblock fix

15-Apr-2010 Jean-Marie Simonet
 #$ Refactoring ini/keys in libraries documents, error, event, filesystem
 ^$ Changed some keys in com_plugins to fit new pluralisation JText
 # Fixed [20092], ( Thanks Ole)
 # Fixed com_banners cache (Thanks Dennis)
 $ Added missing strings

15-Apr-2010 Andrew Eddie
 ^ Decoupled the core.admin check from JAccess and moved to JUser::authorise.
 ^ Reinstated the lost root_user failsafe in the configuration file.
 - Deprecated JController _acoSection and _acoSectionValue properties, authorize and setAccessControl methods.
 + Add second argument to JController::setMessage to set the message type.