@@ -86,6 +86,7 @@ COM_MENUS_ITEM_MODULE_ACCESS_POSITION="%1$s <small>(%2$s in %3$s)</small>"
 COM_MENUS_ITEM_MODULE_ASSIGNMENT="Module Assignment for this Menu Item"
 COM_MENUS_ITEM_OPTIONS="Menu Item Options"
 COM_MENUS_ITEM_OPTIONS="Options"
+COM_MENUS_ITEM_REQUIRED="Required"
 COM_MENUS_ITEMS_SEARCH_FILTER="Search title or alias. Prefix with id: to search for a menu id."
 COM_MENUS_LAYOUT_ADVANCED_OPTIONS_LABEL="Advanced Options"
 COM_MENUS_LAYOUT_MENUTYPE_OPTIONS_LABEL="Menu Type Options"
@@ -126,7 +127,7 @@ COM_MENUS_BASIC_FIELDSET_LABEL="Basic Options"
 COM_MENUS_ADVANCED_FIELDSET_LABEL="Advanced Options"
 COM_MENUS_METADATA_FIELDSET_LABEL="Metadata Options"
 COM_MENUS_INTEGRATION_FIELDSET_LABEL="Integration Options"
-COM_MENUS_REQUEST_FIELDSET_LABEL="Menu Item Type Options"
+COM_MENUS_REQUEST_FIELDSET_LABEL="Required Settings"
 
 ; controllers
 COM_MENUS_ITEMS_REBUILD_SUCCESS="Menu items list successfully rebuilt"
